trying to avoid compilation troubles by splitting the content in multiple files