@@ -1,2 +1,2 @@
 set SCRIPT_DIR=%~dp0
-java -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m -Xmx712M -Xss2M -jar "%SCRIPT_DIR%\sbt-launcher.jar" %*
+java -Xmx1024M -jar "%SCRIPT_DIR%sbt-launch.jar" %*
